fix: align the design with Figma

--- a/force-app/main/default/lwc/hd_AppointmentOrderItems/hd_AppointmentOrderItems.css
+++ b/force-app/main/default/lwc/hd_AppointmentOrderItems/hd_AppointmentOrderItems.css
@@ -1,3 +1,7 @@
 :host {
     font-family: Arial, 'Salesforce Sans', Helvetica, sans-serif;
 }
+
+.slds-table thead th {
+    background-color: #f3f2f2;
+}
